<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty"></string>
    
    <string name="app_name">雲算圖</string>
    <string name="about">這是 HiRender Android 手機版應用程式</string>
    <string name="version">版本: 1.0</string>
    
    <string name="app_exit_title">退出雲算圖</string>
    <string name="app_exit_confirm">請問確定要退出雲算圖行動版嗎？</string>
    
    <string name="title_login">登入雲算圖</string>
    <string name="label_login_account">帳號</string>
    <string name="label_login_mima">密碼</string>
    <string name="label_login_remember">自動登入</string>
    <string name="label_login_go">登入</string>
    <string name="label_logout">登出</string>
    
    <string name="title_mission">任務列表</string>
    <string name="label_mission_info">已執行:%%s / 狀態:%%s</string>
    <string name="label_mission_act_cancel">取消任務</string>
    <string name="label_mission_act_pause">暫停任務</string>
    <string name="label_mission_act_resume">繼續任務</string>
    <string name="label_mission_act_restart">重啟任務</string>
    <string name="label_mission_result_movie">播放作品影片</string>
    <string name="label_mission_result_download">下載結果檔</string>
    <string name="label_mission_detail_owner">擁有者</string>
    <string name="label_mission_detail_engine">算圖引擎</string>
    <string name="label_mission_detail_scene">目標場景檔</string>
    <string name="label_mission_detail_range">影格範圍</string>
    <string name="label_mission_detail_time_create">建立時間</string>
    <string name="label_mission_detail_time_start">起始時間</string>
    <string name="label_mission_detail_time_done">完成時間</string>
    <string name="label_mission_detail_priority">優先等級</string>
    <string name="label_mission_detail_9"></string>
    <string name="label_mission_detail_10"></string>
    
    <string name="title_frame">任務[%s]影格列表</string>
    <string name="label_frame_name">影格序:%d</string>
    <string name="label_frame_info">已執行:%%s / 狀態:%%s</string>
    <string name="label_frame_result_log">檢視系統訊息</string>
    <string name="label_frame_result_pic">檢視作品縮圖</string>
    <string name="label_frame_result_download">下載完整圖檔</string>
    
    <string name="label_act_refresh">更新</string>
    <string name="label_act_settings">設定</string>
    <string name="label_duration">[%%02d時 %%02d分 %%02d秒]</string>
    <string name="label_duration_no_hour">[%%02d分 %%02d秒]</string>
    <string name="label_duration_unknown">[ - ]</string>
    
    <string name="msg_conn_fail">連線異常，請稍後再試</string>
    <string name="msg_fail_auth">身分認證失敗，請重新登入</string>
    <string name="msg_login_ok">登入成功</string>
    <string name="msg_login_fail">登入失敗</string>
    <string name="msg_login_progress">登入雲算圖中&#8230;</string>
    <string name="msg_login_fail_auth">帳號或密碼錯誤，請重新輸入</string>
    <string name="msg_mission_get_progress">取得任務列表中&#8230;</string>
    <string name="msg_mission_get_done">取得 %d 筆任務資訊</string>
    <string name="msg_mission_get_fail">取得任務列表失敗</string>
    <string name="msg_mission_act_progress">執行任務操作中&#8230;</string>
    <string name="msg_mission_act_done">任務操作成功</string>
    <string name="msg_mission_act_fail">任務操作失敗</string>
    
    <string name="label_menu_item_search">搜尋</string>
    <string name="label_menu_item_retry">重試</string>
    <string name="label_menu_item_cancel">取消</string>
    <string name="label_menu_item_pause">暫停</string>
    <string name="label_menu_preference">使用者偏好</string>
    
    <string name="label_software">算圖軟體種類</string>
    <string name="label_select">選取</string>
    
    <string name="desc_logo_hrm">雲算圖行動版</string>
    <string name="desc_preference">設定</string>
    <string name="desc_help">幫助</string>
    
</resources>
